<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.GameDealActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/AppMetalicBlack"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/gameDealPriceTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Powered by CheapShark.com"
        app:layout_constraintEnd_toEndOf="@+id/GameDealSaveDealButton"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/GameDealSaveDealButton"
        app:layout_constraintTop_toBottomOf="@+id/GameDealSaveDealButton" />

    <TextView
        android:id="@+id/GameDealTextView"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/gaming_font"
        android:scrollbarSize="5sp"
        android:scrollbarThumbVertical="@color/AppWhite"
        android:scrollbars="vertical"
        android:text="@string/textview"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/GameDealimageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@+id/GameDealimageView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/GameDealimageView"
        android:layout_width="203dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@android:drawable/divider_horizontal_dark" />

    <Button
        android:id="@+id/GameDealGetDealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button"
        android:text="@string/get_deal"
        app:icon="@drawable/ic_baseline_shopping_bag_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameDealPriceTV" />

    <Button
        android:id="@+id/GameDealSaveDealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="@string/save_deal"
        app:icon="@drawable/ic_baseline_save_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameDealGetDealButton" />

    <TextView
        android:id="@+id/GameDealPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/gamePriceTV"
        app:layout_constraintTop_toBottomOf="@+id/GameDealimageView" />

    <TextView
        android:id="@+id/gamePriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Price: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/GameDealPriceTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/GameDealPriceTV"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>